[package]
name = "neat-gru"
version = "1.4.0"
authors = ["sakex <alexandre@senges.ch>"]
edition = "2018"
description = "NEAT algorithm with GRU gates"
license = "GPL-3.0"
repository = "https://github.com/sakex/neat-gru-rust"
categories = ["science", "wasm"]
keywords = ["neat", "ai", "machine-learning", "genetic", "algorithm"]

[features]
default = []
relu = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.143", features = ["derive", "rc"] }
serde_json = "1.0.83"
num = "0.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
numeric_literals = "0.2.0"
rayon = "1.5.3"
itertools = "0.10.1"
async-trait = "0.1.51"
log = "0.4.17"
tempdir = "0.3.7"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name="math_functions"
harness=false

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.7", features = ["js"] }

[profile.release]
# Link time optimisation, possibly even with C++, equivalent to G++'s -flto
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1

# Prevent inserting panic handlers in ASM
panic = "abort"

# Optimisation level, equivalent to G++'s -O3
opt-level = 3
